# TuttleOFX

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  AUTHORS.md  CMakeLists.txt  COPYING  COPYING.md  Dockerfile  Dockerfile-env-python2  Dockerfile-env-python3  Dockerfile-python2  Dockerfile-python3  Dockerfile-python3.5  INSTALL  INSTALL-ext-fedora.md  INSTALL-ext-macos.md  INSTALL-ext-ubuntu.md  INSTALL-ext-windows.md  INSTALL.bjam  INSTALL.bjam.md  INSTALL.md  INSTALL.scons  Jamroot  LICENCE.TuttleOFX  LICENSE.TuttleOFX  Makefile  README  README.md  SConscript  SConstruct  USAGE.md  configure  finalize.sconf  groups  project.config  uncrustify.cfg  uncrustify.sh  uncrustify_it.bat
applications/: CMakeLists.txt  dir.doxygen
applications/example/browsePlugins/: Jamfile.v2
applications/example/buffer/: SConscript
applications/example/canny/: Jamfile.v2  SConscript
applications/example/cannyTerry/: SConscript
applications/example/io/: SConscript
applications/example/python/: animatedBlur.py  browsePlugins.py  memoryCache.py  numpyImage.py  numpyInputBuffer.py  numpyInputBufferCallback.py  numpyOutputBuffer.py  readBlurWrite.py  simpleNodes.py  threadEnv.py
applications/example/pythonBinding/: README.md  SConscript  demo_burn_timecode.py  demo_constant_merge.py  demo_progress_handle.py  demo_seq_to_movie.py  demo_text_burnin.py  envTuttle.py  getBestPlugin.py  listPlugins  listPlugins.py  loadTuttleLibraries.py  seq-info  seq-info.py  viewer  viewer.py
applications/example/simpleInputBuffer/: SConscript
applications/example/simpleNodes/: SConscript
applications/pyTuttle/: SConscript
applications/qSam/: Jamfile.v2  SConscript
applications/sam/: CMakeLists.txt  Jamfile.v2  SConscript  common.py  sam-cp.py  sam-ls.py  sam-mv.py  sam-rm.py  sam.py  sam_cp.py  sam_do.py  sam_ls.py  sam_mv.py  sam_rm.py
applications/sam-check/: Jamfile.v2  SConscript
applications/sam-check/src/: main.cpp
applications/sam-convert/: Jamfile.v2
applications/sam-convert/src/: main.cpp
applications/sam-cp/: Jamfile.v2
applications/sam-cp/src/: main.cpp
applications/sam-do/: Jamfile.v2  SConscript
applications/sam-do/src/: main.cpp
applications/sam-info/: Jamfile.v2  SConscript
applications/sam-info/src/: main.cpp
applications/sam-ls/: Jamfile.v2
applications/sam-ls/src/: main.cpp
applications/sam-mv/: Jamfile.v2  SConscript
applications/sam-plugins/: Jamfile.v2  SConscript
applications/sam-plugins/src/: main.cpp
applications/sam-rm/: Jamfile.v2
applications/sam-rm/src/: main.cpp
applications/sam/common/: samCmdLines.py  samDoUtils.py  samUtils.py
applications/sam/src/: main.cpp
applications/script/: CMakeLists.txt  README.md  seqToMovie.py
applications/test/: samCommands.sh
applications/testCanny/: Jamfile.v2  SConscript
libraries/tuttle/: CMakeLists.txt  Jamfile.v2  SConscript
libraries/tuttle/pyTest/: SConscript  testBitDepth.py  testBrowsePlugins.py  testCheckerBlurWrite.py  testClamp.py  testComputeTime.py  testExportDot.py  testFps.py  testGetBestPlugin.py  testGlobalHash.py  testGraphConnections.py  testInputBufferCallback.py  testInputBufferWithNumpy.py  testLocalHash.py  testMemoryCache.py  testMerge.py  testMultipleCompute.py  testNodeInstance.py  testOutputBufferCallback.py  testParamAnimation.py  testParamProps.py  testParamValues.py  testPluginDescription.py  testPluginInstance.py  testProperties.py  testSimpleNodeList.py  testThreadEnv.py  testTimeShift.py  testTranscodeVideo.py  testUnusedNodes.py
libraries/tuttle/python/: envTuttle.py  getBestPlugin.py
libraries/tuttle/src/: namespace.doxygen
libraries/tuttle/tests/: CMakeLists.txt  Jamfile.v2
plugins/: CMakeLists.txt  Jamfile.v2  dir.doxygen
plugins/_new/: newPlugin.py  plugGen.py  renameInDirectory.py
plugins/_new/ImageEffectApi/: Jamfile.v2
plugins/_new/folder/: SConscript_
plugins/_scripts/: README.md  checkBrackets.py  newPlugin.py  renameInDirectory.py
plugins/_scripts/ImageEffectApi/: CMakeLists.txt  Jamfile.v2  SConscript_
plugins/basic/: Jamfile.v2
plugins/basic/src/: basic.cpp
plugins/basic/tests/: Jamfile.v2
plugins/bitDepthConv/: Jamfile.v2
plugins/bitDepthConv/src/: BitDepthConvDefinitions.hpp  BitDepthConvPlugin.hpp  BitDepthConvPluginFactory.cpp  BitDepthConvProcess.tcc
plugins/colorspace/: Jamfile.v2
plugins/colorspace/src/: Jamfile.v2
plugins/crop/: Jamfile.v2
plugins/crop/src/: CropMargin.cpp  CropMargin.hpp  CropPlugin.cpp  CropPlugin.hpp  CropPluginFactory.cpp  CropProcess.hpp  CropProcess.tcc
plugins/dpx/src/: Jamfile.v2  dpxMainEntry.cpp
plugins/dpxReader/: Jamfile.v2
plugins/dpxReader/src/: DPXReaderPlugin.cpp  DPXReaderPlugin.hpp  DPXReaderPluginFactory.cpp  DPXReaderProcess.hpp  DPXReaderProcess.tcc
plugins/dpxWriter/: Jamfile.v2
plugins/dpxWriter/src/: DPXWriterDefinitions.hpp  DPXWriterPlugin.cpp  DPXWriterPlugin.hpp  DPXWriterPluginFactory.cpp  DPXWriterProcess.hpp  DPXWriterProcess.tcc
plugins/exr/: Jamfile.v2
plugins/exr/src/: Jamfile.v2  exrMainEntry.cpp
plugins/exr/tests/: Jamfile.v2
plugins/image/: Jamfile.v2
plugins/image/DebugImageEffectApi/: Jamfile.v2
plugins/image/Dummy/: CMakeLists.txt
plugins/image/TimeShift/: Jamfile.v2
plugins/image/filter/: Jamfile.v2
plugins/image/generator/: Jamfile.v2
plugins/image/io/: Jamfile.v2
plugins/image/process/: Jamfile.v2
plugins/invert/: Jamfile.v2
plugins/invert/src/: InvertPlugin.cpp  InvertPlugin.hpp  InvertPluginFactory.cpp  InvertProcess.hpp  InvertProcess.tcc  invert.cpp
plugins/lut/: Jamfile.v2
plugins/lut/src/: LutDefinitions.hpp  LutPlugin.cpp  LutPlugin.hpp  LutPluginFactory.cpp  LutProcess.hpp  LutProcess.tcc
plugins/merge/: Jamfile.v2
plugins/merge/src/: ColorMerge.hpp  MergeDefinitions.hpp  MergeFunctors.hpp  MergePlugin.cpp  MergePlugin.hpp  MergePluginFactory.cpp  MergeProcess.hpp  MergeProcess.tcc  NumericAdds.hpp  ViewMerge.hpp  ViewsMerging.hpp
plugins/param/: Jamfile.v2
plugins/param/Math/: Jamfile.v2
plugins/pngReader/: Jamfile.v2
plugins/pngWriter/: Jamfile.v2
plugins/private/: .gitignore  README
(+2928 files in other folders)
