add_subdirectory(sam/src/sam/check)
add_subdirectory(sam/src/sam/cp)
add_subdirectory(sam/src/sam/diff)
add_subdirectory(sam/src/sam/do)
add_subdirectory(sam/src/sam/info)
add_subdirectory(sam/src/sam/ls)
add_subdirectory(sam/src/sam/mv)
add_subdirectory(sam/src/sam/plugins)
add_subdirectory(sam/src/sam/rm)
add_subdirectory(sam/src/sam/sam)
